<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Find It!</string>
    <string name="title_activity_view_furniture">View Furniture</string>
    <string name="title_activity_set_furniture_properties">Set Furniture Properties</string>
    <string name="title_activity_create_furniture">Create Furniture</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_view_drawer">View Drawer</string>
    
    <string name="add_furniture">Add Furniture</string>
	<string name="remove_furniture">Remove Furniture</string>
	<string name="search">Search</string>
    <string name="settings">Settings</string>
	<string name="logout">Logout</string>
	<string name="delete_account">Delete Account</string>
	
	<color name="blue">#0000FF</color>
	<color name="black">#000000</color>
	<color name="white">#FFFFFF</color>
</resources>
