<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jro.findit.ViewFurniture" >

    <item
        android:id="@+id/add_furniture"
        android:orderInCategory="0"
        android:title="@string/add_furniture"/>
    
    <item
        android:id="@+id/remove_furniture"
        android:orderInCategory="1"
        android:title="@string/remove_furniture"/>
    
     <item
        android:id="@+id/search"
        android:orderInCategory="2"
        android:title="@string/search"/>
     
      <item
        android:id="@+id/logout"
        android:orderInCategory="3"
        android:title="@string/logout"/>
      
      
      <item
        android:id="@+id/database"
        android:orderInCategory="4"
        android:title="View Database"/>
      
      
      <item
        android:id="@+id/delete_account"
        android:orderInCategory="5"
        android:title="@string/delete_account"/>

</menu>